# screenies-editor

./: .gitignore  Cargo.toml  README.en.md  README.id.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  native-preview.yml  nightly.yml  pages.yml  release.yml
core/: Cargo.toml
core/src/: chatlog_library.rs  error.rs  gallery.rs  lib.rs
core/src/chatlog/: mod.rs
core/src/render/: compose.rs  crop.rs  filters.rs  layout.rs  mod.rs  sticker.rs  text.rs
docs/: 2.0-MIGRATION.md  3.0-ROADMAP.md  CHANGELOG.md  DEVELOPMENT.md  NATIVE-MIGRATION.md  PRESETS.md
docs/milestone-b/: CHANGELOG.md  PR-DESCRIPTION.md  QA.md  README.md  TODO.md
examples/presets/: README.md  contoh-server-kustom.toml  jgrp.toml  minimal.toml
native/: Cargo.toml  build.rs
native/assets/: screenies-native.desktop
native/src/: chatlog_browser.rs  chatlog_parser.rs  editor.rs  gallery.rs  i18n.rs  icons.rs  main.rs  theme.rs
qt/: Cargo.toml  build.rs
qt/qml/: Main.qml
qt/qml/pages/: ChatlogParserPage.qml  EditorPage.qml  GalleryPage.qml
qt/src/: main.rs
qt/src/bridge/: app.rs  mod.rs
site/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: clipboard.rs  commands.rs  config.rs  error.rs  files.rs  fonts.rs  main.rs  templates.rs
src-tauri/src/chatlog/: autocolor.rs  mod.rs  parser.rs  preset.rs  systag.rs  timestamp.rs
src-tauri/src/render/: background.rs  compose.rs  crop.rs  filters.rs  mod.rs  sticker.rs  text.rs
src/styles/: main.css  panels.css  theme.css
src/ts/: backgrounds.ts  canvas.ts  chatlog.ts  colorpalette.ts  crop.ts  export.ts  filters.ts  history.ts  i18n.ts  main.ts  preset.ts  settings.ts  shortcuts.ts  state.ts  stickers.ts  tauri-bridge.ts  textstyle.ts  theme.ts  types.ts  zones.ts
