# Root workspace manifest.
#   core/ — screenies-core: shell-independent parser/render/export pipeline.
#
# The Tauri shell (src-tauri/) and its TypeScript frontend were removed in the
# 2.0 cutover to Qt (see docs/2.0-MIGRATION.md). qt/ (screenies-qt, the Qt
# shell) is intentionally EXCLUDED: it needs a Qt6 + C++ toolchain, so keeping
# it out of the default workspace lets `cargo test --workspace` stay green on
# machines/CI without Qt. Build it explicitly with `cargo run -p screenies-qt`.
[workspace]
resolver = "2"
members = ["core"]
exclude = ["qt"]
