# Root workspace manifest.
#   core/ — screenies-core: the shell-independent parser/render/export engine.
#
# The 1.x Tauri shell + its TypeScript frontend were removed on this branch —
# 2.0 is the native egui app in native/ (the old app lives on `main` / `v1.*`).
# native/ (screenies-native) is EXCLUDED from the default workspace: it pulls
# egui's Linux GUI system-deps, so keeping it out lets `cargo test --workspace`
# stay fast/green in CI. Build/run it with `cd native && cargo run`.
[workspace]
resolver = "2"
members = ["core"]
exclude = ["native"]
