# screenies-native — the 2.0 shell: a pure-Rust egui/eframe app that runs the
# SAME screenies-core pipeline as the Tauri app, with NO webview. Targets old
# laptops (wide compatibility) with a small static binary.
#
# Excluded from the default cargo workspace so `cargo test --workspace` stays
# fast/green without egui's Linux GUI system-deps. Build/run explicitly:
#   cd native && cargo run
#
# ⚠️ Phase-0 scaffold: landing menu + stub pages. The editor/parser/gallery
# screens are filled in phase by phase (see docs/2.0-MIGRATION.md).
[package]
name = "screenies-native"
version = "2.0.0-alpha.0"
edition = "2021"
rust-version = "1.77"
description = "ScreeniesEditor — Screenshot Roleplay editor for the SA-MP community (native egui shell)"
license = "MIT"

# ── Linux packaging (cargo-deb) ──
# `$auto` runs dpkg-shlibdeps so the .deb declares the real runtime libs
# (GTK3, OpenGL, xkbcommon, …) the binary links against.
[package.metadata.deb]
section = "graphics"
priority = "optional"
depends = "$auto"
assets = [["target/release/screenies-native", "usr/bin/", "755"]]

# ── Linux packaging (cargo-generate-rpm) ──
# auto-req disabled for the alpha (avoids cross-distro dep-name mismatch);
# Fedora testers install GTK3/Mesa themselves. Re-enable when we ship for real.
[package.metadata.generate-rpm]
auto-req = "disabled"
assets = [
    { source = "target/release/screenies-native", dest = "/usr/bin/screenies-native", mode = "755" },
]

[dependencies]
screenies-core = { path = "../core" }
eframe = "0.29"       # brings egui (used via eframe::egui — no separate dep)
rfd = "0.15"          # native file dialogs (open photo, open chatlog folder)
image = "0.25"
base64 = "0.22"
