# screenies-qt — the 2.0 Qt shell (see docs/2.0-MIGRATION.md).
#
# Runs the SAME screenies-core pipeline as the Tauri app, with a QML UI
# driven by CXX-Qt instead of a webview. NOT part of the default cargo
# workspace (needs a Qt6 + C++ toolchain) — build explicitly:
#   cargo run -p screenies-qt
#
# ⚠️ Phase-0 scaffold: not yet build-verified. CXX-Qt API/version specifics
# may need adjustment against your locally installed Qt6.
[package]
name = "screenies-qt"
version = "2.0.0-alpha.0"
edition = "2021"
rust-version = "1.77"

[dependencies]
screenies-core = { path = "../core" }
cxx = "1"
cxx-qt = "0.7"
cxx-qt-lib = "0.7"

[build-dependencies]
cxx-qt-build = "0.7"
