[package]
name = "screenies-editor"
version = "1.1.0"
description = "ScreeniesEditor — Screenshot Roleplay editor for the SA-MP community"
authors = ["Isut Indraputra", "Claude (Anthropic)"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
screenies-core = { path = "../core" }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tauri-plugin-dialog = "2"
base64 = "0.22"   # encode dropped image files into data: URLs for the webview

# ── Arriving in later milestones (kept out of M1 so the first build stays lean) ──
# tauri-plugin-fs = "2"             # M3: file writes
# dirs = "5"                        # M4: config dir for settings/templates
